--- a/Working_Agreements.ipynb
+++ b/Working_Agreements.ipynb
@@ -12,9 +12,18 @@
     "##### Scrum Master: Patricia \n",
     "\n",
     "#### 1. Nos comprometemos a: \n",
-    "##### - \n",
-    "##### - \n",
-    "##### - \n",
+    "##### - a partir de las 20.00 no esperamos respuesta, a no ser que estemos disponibles y queramos responder \n",
+    "##### - uso del tablero: cada vez que terminemos una tarea o desglose, actualizamos el tablero \n",
+    "##### - asegurarnos de hacer pull antes de hacer push \n",
+    "##### - avisar por slack cada vez que hagamos push, pull, o actualicemos tablero \n",
+    "##### - chinchetar informacion hablada por slack que sea útil \n",
+    "##### - utilizar los hilos en slack!! Utilizar palabras clave / hashtag para poder identificarlo fácilmente \n",
+    "##### - empatía, respeto, comunicación, sinceridad \n",
+    "##### - apoyarnos entre nosotras, comunicar si necesitamos cambio/ayuda\n",
+    "##### - siempre ponernos al día de los que hacemos individualmente para mantener al grupo al tanto \n",
+    "##### - Viernes para Reuniones de resumen de la semana \n",
+    "##### - documento de ideas para la presentacion (markdown) + hilo en slack para ideas \n",
+    "\n",
     "\n",
     "#### 2. Comunicación a través de: \n",
     "\n",
