Sustitución de rutas en los .ipynb de la carpeta Comprobaciones: se ha creado una copia en este origen para poder hacer pruebas y comprobaciones conjuntas y nos coincida la ruta

--- a/Comprobaciones/Mayka.ipynb
+++ b/Comprobaciones/Mayka.ipynb
@@ -14,12 +14,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "ae4c01cf",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"../Análisis_y_transformación_datos/raw_data.csv\", index_col= 0) ## de cara a la exportación para no duplicar el index fantasma"
+    "df = pd.read_csv(\"raw_data_copia.csv\", index_col= 0) ## de cara a la exportación para no duplicar el index fantasma"
    ]
   },
   {
