--- a/Comprobaciones/Patricia.ipynb
+++ b/Comprobaciones/Patricia.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "795b7f28",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('raw_data.csv', index_col=0)"
+    "df = pd.read_csv('raw_data_copia.csv', index_col=0)"
    ]
   },
   {
@@ -2546,7 +2546,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.7"
+   "version": "3.14.0"
   }
  },
  "nbformat": 4,
