--- a/Comprobaciones/totalworkingyears-yearsatcompany-jobrole-by-Ona.ipynb
+++ b/Comprobaciones/totalworkingyears-yearsatcompany-jobrole-by-Ona.ipynb
@@ -98,12 +98,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "cf63df32",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"raw_data.csv\", index_col= 0) ## de cara a la exportación para no duplicar el index fantasma"
+    "df = pd.read_csv(\"raw_data_copia.csv\", index_col= 0) ## de cara a la exportación para no duplicar el index fantasma"
    ]
   },
   {
