Memoria.md (actualizada), Transformación (columnas businesstravel, department, jobrole y educationfield actualizadas)

--- a/Análisis_y_transformación_datos/Transformación_1.0.ipynb
+++ b/Análisis_y_transformación_datos/Transformación_1.0.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 58,
    "id": "81526617",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 59,
    "id": "9cad08e1",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 60,
    "id": "0f8906d9",
    "metadata": {},
    "outputs": [],
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 61,
    "id": "a950d0cd",
    "metadata": {},
    "outputs": [],
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 62,
    "id": "48346f3e",
    "metadata": {},
    "outputs": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 63,
    "id": "3c380cc6",
    "metadata": {},
    "outputs": [
@@ -294,7 +294,7 @@
        "[1678 rows x 8 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 64,
    "id": "94d0fe33",
    "metadata": {},
    "outputs": [],
@@ -327,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 65,
    "id": "dbffef6b",
    "metadata": {},
    "outputs": [],
@@ -337,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 66,
    "id": "f3219e70",
    "metadata": {},
    "outputs": [
@@ -358,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 67,
    "id": "69287388",
    "metadata": {},
    "outputs": [
@@ -465,7 +465,7 @@
        "[1678 rows x 2 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -484,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 68,
    "id": "31f63d99",
    "metadata": {},
    "outputs": [],
@@ -494,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 69,
    "id": "5fda02d8",
    "metadata": {},
    "outputs": [],
@@ -505,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 70,
    "id": "b3d87c2f",
    "metadata": {},
    "outputs": [
@@ -734,7 +734,7 @@
        "[1678 rows x 10 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -753,7 +753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 71,
    "id": "c8ad3ba6",
    "metadata": {},
    "outputs": [
@@ -768,7 +768,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -779,7 +779,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 72,
    "id": "ec550afc",
    "metadata": {},
    "outputs": [],
@@ -789,7 +789,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 73,
    "id": "f4ed4ba6",
    "metadata": {},
    "outputs": [
@@ -803,13 +803,141 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df[\"maritalstatus\"].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9f484553",
+   "metadata": {},
+   "source": [
+    "**Transformamos: valores NaN por 'non-travel' en columna ``businesstravel`` basados en la información que nos ha proporcionado nuestro enlace con el proyecto**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "id": "e8563d54",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df[\"businesstravel\"] = df[\"businesstravel\"].fillna(\"non-travel\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "id": "c1e267b0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "businesstravel\n",
+       "non-travel           894\n",
+       "travel_rarely        616\n",
+       "travel_frequently    168\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['businesstravel'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3135a486",
+   "metadata": {},
+   "source": [
+    "Transformamos: espaciado sobrante en valores de la columna ``department``, ``jobrole`` y ``educationfield``"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "id": "8011b8b8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[nan ' research & development ' ' sales ' ' human resources ']\n",
+      "-------------\n",
+      "[' research director ' ' manager ' ' sales executive '\n",
+      " ' manufacturing director ' ' research scientist '\n",
+      " ' healthcare representative ' ' laboratory technician '\n",
+      " ' sales representative ' ' human resources ']\n",
+      "[nan 'life sciences' 'technical degree' 'medical' 'other' 'marketing'\n",
+      " 'human resources']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df['department'].unique())\n",
+    "print('-------------')\n",
+    "print(df['jobrole'].unique())\n",
+    "print(df['educationfield'].unique())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "id": "441c0f70",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def sin_espaciado_extra(series):\n",
+    "    return series.str.strip().str.replace(r'\\s+', ' ', regex=True)\n",
+    "\n",
+    "columnas_a_limpiar = ['department', 'jobrole', 'educationfield']  # Ejemplo de columnas\n",
+    "\n",
+    "for c in columnas_a_limpiar:\n",
+    "\n",
+    "    if c in df.columns:  \n",
+    "        df[c] = sin_espaciado_extra(df[c])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "id": "92f4a285",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[nan 'research & development' 'sales' 'human resources']\n",
+      "-------------\n",
+      "['research director' 'manager' 'sales executive' 'manufacturing director'\n",
+      " 'research scientist' 'healthcare representative' 'laboratory technician'\n",
+      " 'sales representative' 'human resources']\n",
+      "-------------\n",
+      "[nan 'life sciences' 'technical degree' 'medical' 'other' 'marketing'\n",
+      " 'human resources']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df['department'].unique())\n",
+    "print('-------------')\n",
+    "print(df['jobrole'].unique())\n",
+    "print('-------------')\n",
+    "print(df['educationfield'].unique())\n",
+    "\n",
+    "# no nos hace falta limpiar 'roledepartment' porque está destinada a eliminación"
    ]
   },
   {
@@ -822,7 +950,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 80,
    "id": "514d76f4",
    "metadata": {},
    "outputs": [],
@@ -855,7 +983,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.7"
+   "version": "3.14.0"
   }
  },
  "nbformat": 4,
