--- a/DEMO_to_be.ipynb
+++ b/DEMO_to_be.ipynb
@@ -31,6 +31,8 @@
     "\n",
     "Problema: \"¿Nuestros datos de empleadxs son lo suficientemente limpios y precisos como para entrenar futuros modelos de retención? ¿Podemos fiarnos de la información que la plataforma recopila?\"\n",
     "\n",
+    "----> ¿Hay un equipo humano detrás investigando si estamos haciendo las **preguntas adecuadas** para la información que necesitamos?\n",
+    "\n",
     "Narrativa: La demo es una sesión de control de calidad de los datos.\n",
     "\n",
     "### 3. Perspectiva del Inversor:\n",
