actualizaciones despues de pili

--- a/Análisis_y_transformación_datos/ABC Corporation.ipynb
+++ b/Análisis_y_transformación_datos/ABC Corporation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "bff9ec5a",
    "metadata": {},
    "outputs": [],
@@ -17,7 +17,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"raw_data.csv\", index_col= 0) ## de cara a la exportación para no duplicar el index fantasma"
+    "df = pd.read_csv(\"raw_data_limpio.csv\", index_col= 0) ## de cara a la exportación para no duplicar el index fantasma"
    ]
   },
   {
@@ -2932,7 +2932,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "id": "3338cbfb",
    "metadata": {},
    "outputs": [
@@ -2940,18 +2940,20 @@
      "data": {
       "text/plain": [
        "overtime\n",
-       "No     714\n",
-       "Yes    268\n",
-       "Name: count, dtype: int64"
+       "no     42.550656\n",
+       "NaN    41.477950\n",
+       "yes    15.971395\n",
+       "Name: proportion, dtype: float64"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df[\"overtime\"].value_counts()"
+    "# NORMALIZED y NULOS en %\n",
+    "df[\"overtime\"].value_counts(normalize=True, dropna=False)*100"
    ]
   },
   {
@@ -3127,6 +3129,32 @@
    "source": [
     "# StandardHours: Clasificación de jornada (Full Time/Part Time).\n",
     "df[\"standardhours\"].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "91560f3c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "standardhours\n",
+       "part time    55.244338\n",
+       "full time    23.837902\n",
+       "NaN          20.917759\n",
+       "Name: proportion, dtype: float64"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# NORMALIZED, Nulos, %\n",
+    "df[\"standardhours\"].value_counts(normalize=True, dropna=False)*100"
    ]
   },
   {
@@ -4203,7 +4231,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.14.0"
+   "version": "3.13.7"
   }
  },
  "nbformat": 4,
