--- a/Análisis_y_transformación_datos/EDA_2.0.ipynb
+++ b/Análisis_y_transformación_datos/EDA_2.0.ipynb
@@ -2610,4 +2610,11 @@
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
-   "nbcon
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.7"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 5
+}
