Memoria.md (comprobaciones, formato, referencias)

--- a/Análisis_y_transformación_datos/Comparador-columnas.ipynb
+++ b/Análisis_y_transformación_datos/Comparador-columnas.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "d698efc1",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "id": "7eed267c",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "id": "b067cff0",
    "metadata": {},
    "outputs": [],
@@ -46,18 +46,20 @@
     "dftrans= pd.read_csv('raw_data_limpio_2.csv')\n",
     "\n",
     "def cambios(dftrans, columna):\n",
-    "    valores_unicos = dftrans[columna].nunique()\n",
-    "    num_registros = len(dftrans[columna])\n",
-    "    duplicados = num_registros - valores_unicos\n",
+    "        valores_unicos = dftrans[columna].nunique()\n",
+    "        num_registros = len(dftrans[columna])\n",
+    "        duplicados = num_registros - valores_unicos\n",
     "\n",
-    "    print(f\"Valores únicos: {valores_unicos}\\nNúmero de registros: {num_registros}\\nRegistros duplicados: {duplicados}\")\n",
-    "    print('----------------')\n",
-    "    print(\"\\nPorcentajes:\")\n",
-    "    print(df[columna]\n",
+    "        print(f\"Valores únicos: **{valores_unicos}**<br>Número de registros: **{num_registros}**<br><br>Registros duplicados: **{duplicados}**\")\n",
+    "\n",
+    "        print('----------------')\n",
+    "\n",
+    "        print(\"\\nPorcentajes:\")\n",
+    "        print(dftrans[columna]\n",
     "        .value_counts(normalize=True, dropna=False)\n",
     "        .mul(100)\n",
     "        .round(2)\n",
-    "        .sort_values(ascending=False))\n"
+    "        .sort_values(ascending=False))"
    ]
   },
   {
@@ -70,56 +72,42 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Valores únicos: 194\n",
+      "Valores únicos: 4\n",
       "Número de registros: 1678\n",
-      "Registros duplicados: 1484\n",
+      "Registros duplicados: 1674\n",
       "----------------\n",
       "\n",
       "Porcentajes:\n",
-      "hourlyrate\n",
-      "NaN           75.51\n",
-      "36.254439      4.53\n",
-      "69.532083      4.47\n",
-      "129.060911     2.44\n",
-      "197.846418     0.83\n",
-      "              ...  \n",
-      "108.230159     0.06\n",
-      "247.477183     0.06\n",
-      "67.424603      0.06\n",
-      "34.821429      0.06\n",
-      "133.159722     0.06\n",
-      "Name: proportion, Length: 195, dtype: float64\n",
+      "worklifebalance\n",
+      "3,0    56.38\n",
+      "2,0    22.29\n",
+      "4,0     9.65\n",
+      "NaN     6.79\n",
+      "1,0     4.89\n",
+      "Name: proportion, dtype: float64\n",
       "\n",
       "-----<------<-------<---@\n",
       "\n",
-      "Valores únicos: 707\n",
-      "Número de registros: 1614\n",
-      "Registros duplicados: 907\n",
+      "Valores únicos: **4**<br>Número de registros: **1614**<br><br>Registros duplicados: **1610**\n",
       "----------------\n",
       "\n",
       "Porcentajes:\n",
-      "hourlyrate\n",
-      "NaN           75.51\n",
-      "36.254439      4.53\n",
-      "69.532083      4.47\n",
-      "129.060911     2.44\n",
-      "197.846418     0.83\n",
-      "              ...  \n",
-      "108.230159     0.06\n",
-      "247.477183     0.06\n",
-      "67.424603      0.06\n",
-      "34.821429      0.06\n",
-      "133.159722     0.06\n",
-      "Name: proportion, Length: 195, dtype: float64\n"
+      "worklifebalance\n",
+      "3.0    56.57\n",
+      "2.0    22.24\n",
+      "4.0     9.60\n",
+      "NaN     6.69\n",
+      "1.0     4.89\n",
+      "Name: proportion, dtype: float64\n"
      ]
     }
    ],
    "source": [
     "# USO:\n",
     "\n",
-    "rawdata(df, \"hourlyrate\")\n",
+    "rawdata(df, \"worklifebalance\")\n",
     "print('\\n-----<------<-------<---@\\n')\n",
-    "cambios(dftrans, \"hourlyrate\")"
+    "cambios(dftrans, \"worklifebalance\")"
    ]
   }
  ],
