código-comparador-arreglado

--- a/Análisis_y_transformación_datos/Comparador-columnas.ipynb
+++ b/Análisis_y_transformación_datos/Comparador-columnas.ipynb
@@ -12,31 +12,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "id": "7eed267c",
    "metadata": {},
    "outputs": [],
    "source": [
     "df= pd.read_csv('raw_data.csv')\n",
+    "dftrans = pd.read_csv('raw_data_limpio_2.csv')\n",
     "\n",
     "def rawdata(df, columna):\n",
     "    valores_unicos = df[columna].nunique()\n",
     "    num_registros = len(df[columna])\n",
     "    duplicados = num_registros - valores_unicos\n",
     "\n",
-    "    print(f\"Valores únicos: {valores_unicos}\\nNúmero de registros: {num_registros}\\nRegistros duplicados: {duplicados}\")\n",
+    "    print(f\"Valores únicos en archivo original: {valores_unicos}\\nNúmero de registros: {num_registros}\\nRegistros duplicados: {duplicados}\")\n",
     "    print('----------------')\n",
     "    print(\"\\nPorcentajes:\")\n",
     "    print(df[columna]\n",
     "        .value_counts(normalize=True, dropna=False)\n",
     "        .mul(100)\n",
     "        .round(2)\n",
-    "        .sort_values(ascending=False))\n"
+    "        .sort_values(ascending=False))\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "id": "b067cff0",
    "metadata": {},
    "outputs": [],
@@ -50,7 +52,7 @@
     "        num_registros = len(dftrans[columna])\n",
     "        duplicados = num_registros - valores_unicos\n",
     "\n",
-    "        print(f\"Valores únicos: **{valores_unicos}**<br>Número de registros: **{num_registros}**<br><br>Registros duplicados: **{duplicados}**\")\n",
+    "        print(f\"Valores únicos en archivo transformado: {valores_unicos}\\nNúmero de registros:{num_registros}\\nRegistros duplicados: {duplicados}\")\n",
     "\n",
     "        print('----------------')\n",
     "\n",
@@ -64,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "id": "b6418897",
    "metadata": {},
    "outputs": [
@@ -72,32 +74,121 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Valores únicos: 4\n",
+      "Valores únicos en archivo original: 54\n",
       "Número de registros: 1678\n",
-      "Registros duplicados: 1674\n",
+      "Registros duplicados: 1624\n",
       "----------------\n",
       "\n",
       "Porcentajes:\n",
-      "worklifebalance\n",
-      "3,0    56.38\n",
-      "2,0    22.29\n",
-      "4,0     9.65\n",
-      "NaN     6.79\n",
-      "1,0     4.89\n",
+      "age\n",
+      "35              5.24\n",
+      "31              5.24\n",
+      "34              5.13\n",
+      "29              4.89\n",
+      "36              4.71\n",
+      "32              3.93\n",
+      "30              3.87\n",
+      "38              3.81\n",
+      "33              3.75\n",
+      "40              3.58\n",
+      "28              3.22\n",
+      "37              3.22\n",
+      "27              3.22\n",
+      "45              2.98\n",
+      "42              2.98\n",
+      "41              2.86\n",
+      "39              2.74\n",
+      "26              2.74\n",
+      "43              2.50\n",
+      "46              2.26\n",
+      "44              2.03\n",
+      "50              2.03\n",
+      "47              1.79\n",
+      "24              1.73\n",
+      "25              1.67\n",
+      "49              1.55\n",
+      "55              1.49\n",
+      "51              1.31\n",
+      "48              1.31\n",
+      "53              1.19\n",
+      "54              1.19\n",
+      "52              1.07\n",
+      "56              1.07\n",
+      "22              1.01\n",
+      "21              1.01\n",
+      "58              0.95\n",
+      "23              0.89\n",
+      "59              0.66\n",
+      "20              0.66\n",
+      "18              0.54\n",
+      "19              0.54\n",
+      "57              0.36\n",
+      "60              0.30\n",
+      "twenty-four     0.12\n",
+      "thirty-two      0.12\n",
+      "forty-seven     0.06\n",
+      "thirty-six      0.06\n",
+      "fifty-eight     0.06\n",
+      "fifty-two       0.06\n",
+      "thirty-one      0.06\n",
+      "thirty          0.06\n",
+      "fifty-five      0.06\n",
+      "twenty-six      0.06\n",
+      "thirty-seven    0.06\n",
       "Name: proportion, dtype: float64\n",
       "\n",
       "-----<------<-------<---@\n",
       "\n",
-      "Valores únicos: **4**<br>Número de registros: **1614**<br><br>Registros duplicados: **1610**\n",
+      "Valores únicos en archivo transformado: 43\n",
+      "Número de registros:1614\n",
+      "Registros duplicados: 1571\n",
       "----------------\n",
       "\n",
       "Porcentajes:\n",
-      "worklifebalance\n",
-      "3.0    56.57\n",
-      "2.0    22.24\n",
-      "4.0     9.60\n",
-      "NaN     6.69\n",
-      "1.0     4.89\n",
+      "age\n",
+      "35    5.20\n",
+      "34    5.20\n",
+      "31    5.14\n",
+      "29    4.83\n",
+      "36    4.65\n",
+      "32    4.09\n",
+      "30    3.97\n",
+      "38    3.97\n",
+      "33    3.78\n",
+      "40    3.72\n",
+      "27    3.35\n",
+      "37    3.35\n",
+      "28    3.28\n",
+      "42    3.10\n",
+      "45    2.97\n",
+      "41    2.85\n",
+      "26    2.85\n",
+      "39    2.79\n",
+      "43    2.48\n",
+      "46    2.35\n",
+      "44    2.11\n",
+      "50    1.92\n",
+      "25    1.67\n",
+      "47    1.67\n",
+      "24    1.61\n",
+      "49    1.55\n",
+      "55    1.55\n",
+      "51    1.24\n",
+      "54    1.24\n",
+      "53    1.24\n",
+      "48    1.24\n",
+      "52    1.18\n",
+      "56    1.05\n",
+      "21    0.99\n",
+      "22    0.99\n",
+      "23    0.93\n",
+      "58    0.93\n",
+      "20    0.68\n",
+      "59    0.62\n",
+      "19    0.56\n",
+      "18    0.50\n",
+      "60    0.31\n",
+      "57    0.31\n",
       "Name: proportion, dtype: float64\n"
      ]
     }
@@ -105,9 +196,9 @@
    "source": [
     "# USO:\n",
     "\n",
-    "rawdata(df, \"worklifebalance\")\n",
+    "rawdata(df, \"age\")\n",
     "print('\\n-----<------<-------<---@\\n')\n",
-    "cambios(dftrans, \"worklifebalance\")"
+    "cambios(dftrans, \"age\")"
    ]
   }
  ],
