ABC Corp - cosas minimas comprobando mientras veiamos el .md

--- a/Análisis_y_transformación_datos/ABC Corporation.ipynb
+++ b/Análisis_y_transformación_datos/ABC Corporation.ipynb
@@ -12,12 +12,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "cf63df32",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"raw_data_limpio.csv\", index_col= 0) ## de cara a la exportación para no duplicar el index fantasma"
+    "df = pd.read_csv(\"raw_data_limpio_2.csv\", index_col= 0) ## de cara a la exportación para no duplicar el index fantasma"
    ]
   },
   {
@@ -1976,7 +1976,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
+   "id": "f60a301e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "educationfield\n",
+       "NaN                 46.158612\n",
+       "life sciences       21.623296\n",
+       "medical             17.100372\n",
+       "marketing            6.443618\n",
+       "technical degree     4.275093\n",
+       "other                3.655514\n",
+       "human resources      0.743494\n",
+       "Name: proportion, dtype: float64"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[\"educationfield\"].value_counts(dropna=False, normalize=True)*100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "id": "f01f2d53",
    "metadata": {},
    "outputs": [
@@ -1984,16 +2013,16 @@
      "data": {
       "text/plain": [
        "educationfield\n",
-       "Life Sciences       367\n",
-       "Medical             286\n",
-       "Marketing           106\n",
-       "Technical Degree     70\n",
-       "Other                63\n",
-       "Human Resources      12\n",
+       "life sciences       349\n",
+       "medical             276\n",
+       "marketing           104\n",
+       "technical degree     69\n",
+       "other                59\n",
+       "human resources      12\n",
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2103,6 +2132,87 @@
    "source": [
     "# EnvironmentSatisfaction: Nivel de satisfacción con el ambiente laboral.\n",
     "df[\"environmentsatisfaction\"].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "0c3bcec2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.int64(0)"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[\"environmentsatisfaction\"].isna().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "b3bd0157",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "environmentsatisfaction\n",
+       "4     28.500620\n",
+       "3     28.438662\n",
+       "1     18.463445\n",
+       "2     18.401487\n",
+       "12     0.433705\n",
+       "35     0.371747\n",
+       "13     0.371747\n",
+       "24     0.309789\n",
+       "47     0.309789\n",
+       "14     0.309789\n",
+       "41     0.247831\n",
+       "42     0.247831\n",
+       "46     0.247831\n",
+       "36     0.247831\n",
+       "48     0.247831\n",
+       "20     0.185874\n",
+       "22     0.185874\n",
+       "11     0.185874\n",
+       "18     0.185874\n",
+       "45     0.185874\n",
+       "27     0.185874\n",
+       "25     0.185874\n",
+       "17     0.185874\n",
+       "37     0.123916\n",
+       "38     0.123916\n",
+       "16     0.123916\n",
+       "31     0.123916\n",
+       "15     0.123916\n",
+       "19     0.123916\n",
+       "29     0.123916\n",
+       "28     0.061958\n",
+       "33     0.061958\n",
+       "21     0.061958\n",
+       "39     0.061958\n",
+       "49     0.061958\n",
+       "10     0.061958\n",
+       "26     0.061958\n",
+       "43     0.061958\n",
+       "Name: proportion, dtype: float64"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[\"environmentsatisfaction\"].value_counts(dropna=False, normalize=True)*100"
    ]
   },
   {
@@ -3331,7 +3441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 10,
    "id": "185c7cdd",
    "metadata": {},
    "outputs": [
@@ -3339,20 +3449,85 @@
      "data": {
       "text/plain": [
        "worklifebalance\n",
-       "3,0    946\n",
-       "2,0    374\n",
-       "4,0    162\n",
-       "1,0     82\n",
-       "Name: count, dtype: int64"
+       "3.0    56.567534\n",
+       "2.0    22.242875\n",
+       "4.0     9.603470\n",
+       "NaN     6.691450\n",
+       "1.0     4.894672\n",
+       "Name: proportion, dtype: float64"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df[\"worklifebalance\"].value_counts()"
+    "df[\"worklifebalance\"].value_counts(dropna=False, normalize=True)*100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "25e3909d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(3.0)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[\"worklifebalance\"].median()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "54f0d86a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(2.759628154050465)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[\"worklifebalance\"].mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "12f05893",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    3.0\n",
+       "Name: worklifebalance, dtype: float64"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[\"worklifebalance\"].mode()"
    ]
   },
   {
