--- a/Análisis_y_transformación_datos/Comparador-columnas.ipynb
+++ b/Análisis_y_transformación_datos/Comparador-columnas.ipynb
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "b6418897",
    "metadata": {},
    "outputs": [
@@ -74,121 +74,38 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Valores únicos en archivo original: 54\n",
+      "Valores únicos en archivo original: 6\n",
       "Número de registros: 1678\n",
-      "Registros duplicados: 1624\n",
+      "Registros duplicados: 1672\n",
       "----------------\n",
       "\n",
       "Porcentajes:\n",
-      "age\n",
-      "35              5.24\n",
-      "31              5.24\n",
-      "34              5.13\n",
-      "29              4.89\n",
-      "36              4.71\n",
-      "32              3.93\n",
-      "30              3.87\n",
-      "38              3.81\n",
-      "33              3.75\n",
-      "40              3.58\n",
-      "28              3.22\n",
-      "37              3.22\n",
-      "27              3.22\n",
-      "45              2.98\n",
-      "42              2.98\n",
-      "41              2.86\n",
-      "39              2.74\n",
-      "26              2.74\n",
-      "43              2.50\n",
-      "46              2.26\n",
-      "44              2.03\n",
-      "50              2.03\n",
-      "47              1.79\n",
-      "24              1.73\n",
-      "25              1.67\n",
-      "49              1.55\n",
-      "55              1.49\n",
-      "51              1.31\n",
-      "48              1.31\n",
-      "53              1.19\n",
-      "54              1.19\n",
-      "52              1.07\n",
-      "56              1.07\n",
-      "22              1.01\n",
-      "21              1.01\n",
-      "58              0.95\n",
-      "23              0.89\n",
-      "59              0.66\n",
-      "20              0.66\n",
-      "18              0.54\n",
-      "19              0.54\n",
-      "57              0.36\n",
-      "60              0.30\n",
-      "twenty-four     0.12\n",
-      "thirty-two      0.12\n",
-      "forty-seven     0.06\n",
-      "thirty-six      0.06\n",
-      "fifty-eight     0.06\n",
-      "fifty-two       0.06\n",
-      "thirty-one      0.06\n",
-      "thirty          0.06\n",
-      "fifty-five      0.06\n",
-      "twenty-six      0.06\n",
-      "thirty-seven    0.06\n",
+      "educationfield\n",
+      "NaN                 46.13\n",
+      "Life Sciences       21.87\n",
+      "Medical             17.04\n",
+      "Marketing            6.32\n",
+      "Technical Degree     4.17\n",
+      "Other                3.75\n",
+      "Human Resources      0.72\n",
       "Name: proportion, dtype: float64\n",
       "\n",
       "-----<------<-------<---@\n",
       "\n",
-      "Valores únicos en archivo transformado: 43\n",
+      "Valores únicos en archivo transformado: 6\n",
       "Número de registros:1614\n",
-      "Registros duplicados: 1571\n",
+      "Registros duplicados: 1608\n",
       "----------------\n",
       "\n",
       "Porcentajes:\n",
-      "age\n",
-      "35    5.20\n",
-      "34    5.20\n",
-      "31    5.14\n",
-      "29    4.83\n",
-      "36    4.65\n",
-      "32    4.09\n",
-      "30    3.97\n",
-      "38    3.97\n",
-      "33    3.78\n",
-      "40    3.72\n",
-      "27    3.35\n",
-      "37    3.35\n",
-      "28    3.28\n",
-      "42    3.10\n",
-      "45    2.97\n",
-      "41    2.85\n",
-      "26    2.85\n",
-      "39    2.79\n",
-      "43    2.48\n",
-      "46    2.35\n",
-      "44    2.11\n",
-      "50    1.92\n",
-      "25    1.67\n",
-      "47    1.67\n",
-      "24    1.61\n",
-      "49    1.55\n",
-      "55    1.55\n",
-      "51    1.24\n",
-      "54    1.24\n",
-      "53    1.24\n",
-      "48    1.24\n",
-      "52    1.18\n",
-      "56    1.05\n",
-      "21    0.99\n",
-      "22    0.99\n",
-      "23    0.93\n",
-      "58    0.93\n",
-      "20    0.68\n",
-      "59    0.62\n",
-      "19    0.56\n",
-      "18    0.50\n",
-      "60    0.31\n",
-      "57    0.31\n",
+      "educationfield\n",
+      "NaN                 46.16\n",
+      "life sciences       21.62\n",
+      "medical             17.10\n",
+      "marketing            6.44\n",
+      "technical degree     4.28\n",
+      "other                3.66\n",
+      "human resources      0.74\n",
       "Name: proportion, dtype: float64\n"
      ]
     }
@@ -196,9 +113,9 @@
    "source": [
     "# USO:\n",
     "\n",
-    "rawdata(df, \"age\")\n",
+    "rawdata(df, \"educationfield\")\n",
     "print('\\n-----<------<-------<---@\\n')\n",
-    "cambios(dftrans, \"age\")"
+    "cambios(dftrans, \"educationfield\")"
    ]
   }
  ],
